list z-index, css link update

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="stylesheet"
-      href="https://intranet.umiacs.umd.edu/common/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet"
-      href="https://intranet.umiacs.umd.edu/common/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" rel="stylesheet">
+
 <style>
 
 #addresses {
@@ -12,6 +11,7 @@
   right: 0;
   width: 300px;
   padding: 10px;
+  z-index:1000;
 }
 
 #addresses ul {
