Styling on-hover list

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" rel="stylesheet">
+
+
 <style>
 
 #addresses {
   position: absolute;
   top: 0;
   right: 0;
-  width: 200px;
+  width: 300px;
+  padding: 10px;
+  z-index:1000;
+}
+
+#addresses ul {
+  list-style-type: none;
+}
+#addresses ul li {
+  border-bottom: 1px solid #CCC;
 }
 
 #boundary {
