make the width of the SVG element the browser window width minus 300 (pixels) since the addresses column on the right is 300px in width.

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ function HideTooltip()
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
 <script>
-var width = window.innerWidth *0.6,
-height = window.innerHeight-10 ,
+var width = window.innerWidth - 300,
+height = window.innerHeight - 10 ,
 scale = 60000;
 
 var center_x = -73.99,
