--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@ function HideTooltip()
 <script>
 var width = window.innerWidth - 300,
 height = window.innerHeight - 10 ,
-scale = 60000;
+scale = 70000;
+scale_lower = scale * 0.9;
+scale_upper = scale * 3;
+
+var hexbinRadiusScale = d3.scale.log()
+    .domain([scale_lower, scale_upper])
+    .range([4, 10]); 
 
 var center_x = -73.99,
 center_y= 40.71;
@@ -113,11 +119,10 @@ tip = d3.tip().attr('class', 'd3-tip').html(function(d) {
 });
 
 function drawMap(error,json) {
-   
 
     var hexbin = d3.hexbin()
         .size([width, height])
-        .radius(scale/10000)
+        .radius(hexbinRadiusScale(scale))
         .x(function(d) {return d.point[0]})
         .y(function(d) {return d.point[1]});
 
@@ -223,8 +228,8 @@ function drawMap(error,json) {
 
 function showSlider() {   
     var slider = d3.slider()
-        .min(scale * 0.1)
-        .max(scale * 2)
+        .min(min_scale)
+        .max(max_scale)
         .value(scale)
         .orientation("vertical")
         .on("slide", function(evt, value) {
