--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@ tip = d3.tip().attr('class', 'd3-tip').html(function(d) {
   }
   newHTML += "</ul>";
   document.getElementById("addresses").innerHTML = newHTML;
-  return d.length + " addresses with stalled construction projects"; 
+  var num_addresses = d.length;
+  var addresses_number = "addresses with stalled construction projects";
+  if (num_addresses == 1) {
+    addresses_number = "address with a stalled construction project";
+  }
+  return num_addresses + " " + addresses_number; 
 });
 
 function drawMap(error,json) {
@@ -228,8 +233,8 @@ function drawMap(error,json) {
 
 function showSlider() {   
     var slider = d3.slider()
-        .min(min_scale)
-        .max(max_scale)
+        .min(scale_lower)
+        .max(scale_upper)
         .value(scale)
         .orientation("vertical")
         .on("slide", function(evt, value) {
