--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ function HideTooltip()
 <link rel="stylesheet" type="text/css" href="css/d3.slider.css" media="screen" />
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="https://raw.githubusercontent.com/turban/d3.slider/master/d3.slider.js"></script>
+<script src="https://cdn.rawgit.com/turban/d3.slider/master/d3.slider.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="http://d3js.org/d3.hexbin.v0.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
